namespaces/live.cloud-platform.service.justice.gov.uk/cdn-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "cdn-production"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Central Digital"
    cloud-platform.justice.gov.uk/slack-channel: "central-digital-engineering"
    cloud-platform.justice.gov.uk/application: "Static Asset Service"
    cloud-platform.justice.gov.uk/owner: "Central Digital Engineering: central-digital-engineering@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cdn"
    cloud-platform.justice.gov.uk/team-name: "central-digital-engineering"
    cloud-platform.justice.gov.uk/review-after: ""
